changed PWA Name

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aplication",
+    "name": "Music Analyzer",
     "short_name": "FlaskPWA",
     "start_url": "/",
     "display": "standalone",
