--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,15 +1,22 @@
-# Backend/Dockerfile
+# Frontend Dockerfile
+
+# Use the appropriate base image
 FROM python:3.9-slim
 
-# Set the working directory in the container
+# Set the working directory
 WORKDIR /app
 
-# Copy requirements.txt and install dependencies
+# Copy the requirements file
 COPY requirements.txt .
+
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application code
-COPY audio_processor.py .
+# Copy the entire app directory
+COPY . .
 
-# Command to run the application
-CMD ["python", "audio_processor.py"]
+# Expose the appropriate port (if necessary)
+EXPOSE 3000
+
+# Command to run your application
+CMD ["python", "app.py"]
