--- a/spleeter_service/Dockerfile
+++ b/spleeter_service/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 # Install Spleeter and required dependencies
 RUN apt-get update && apt-get install -y ffmpeg && apt-get clean
 RUN pip install --no-cache-dir spleeter
+RUN python3 -m pip install -U demucs
 
 COPY spleeter_service.py .
 
